# ML_TechChallenge_01

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: commercialization_tab_routes.py  endpoints.py  export_tab_routes.py  import_tab_routes.py  processing_tab_routes.py  production_routes.py  production_tab_routes.py
app/core/: constants.py  utils.py
app/data/: comercializacao.csv  import_suco_uva.csv  processing_viniferas.csv  producao.csv  production.csv
app/scraping/: commercialization.py  commercialization_tab.py  export.py  export_tab.py  import_tab.py  processing_tab.py  production.py  production_tab.py  productions.json
app/scraping/functions/: csv_callback.py  drinks.py
app/tests/: constants.py  test_commercialization_routes.py  test_export_routes.py  test_import_endpoints.py  test_import_routes.py  test_processing_routes.py  test_production_routes.py
