[tool.poetry]
name = "ml-techchallenge-01"
version = "0.1.0"
description = "Tech Challenge - Phase 1"
authors = ["Joao Andrade <joaogabriel1598@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
uvicorn = "^0.34.2"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.3"
fastapi = "^0.115.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
